# TaskMan-CLI-PyPi

./: README.md  pyproject.toml  setup.cfg
src/taskman/: helper_functions.py  main.py
taskman_cli/: __init__.py  helper_functions.py  main.py
