[metadata]
name = taskman-cli
version = 0.3.1
author = Taha Yasser Adnan
author_email = tahacodes.101@gmail.com  
description = A minimalistic and user-friendly task management application built with Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tahadnan/TaskMan-CLI-PyPI
project_urls =
    Bug Tracker = https://github.com/tahadnan/TaskMan-CLI-PyPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    prompt_toolkit
    pygments
    ttask-manager
    platformdirs
[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    taskman = taskman.main:main